2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>

	* MonoDevelop.XmlEditor.mds:
	* MonoDevelop.XmlEditor.mdp:
	* MonoDevelop.XmlEditor.csproj: Migrated to MSBuild file
	  format.

2009-02-03  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Fix
	  duplicated ':' when completing incompletely parsed names
	  for the path bar.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* AssemblyInfo.cs:
	* MonoDevelop.XmlEditor.addin.xml: Bump MD version.

2009-02-03  Lluis Sanchez Gual  <lluis@novell.com>

	* gtk-gui/generated.cs:
	* MonoDevelop.XmlEditor.mdp:
	* gtk-gui/MonoDevelop.XmlEditor.Gui.XmlSchemasPanelWidget.cs:
	*
	  gtk-gui/MonoDevelop.XmlEditor.Gui.XmlEditorOptionsPanelWidget.cs:
	  Flush.

2009-02-02  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Completion/XmlCompletionData.cs:
	  Don't use an IActionCompletionData, just generate the
	  completion text as needed and use | as a caret marker.
	  Fixes Bug 471681 - xml tag completion not working.

2009-01-26  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.mdp: Flush project format changes.

2009-01-21  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Add closing tag
	completion to all XML docs.

2009-01-06  Michael Hutchinson  <mhutchinson@novell.com>

	* Makefile.am: Don't define DEBUG, as heavy use of Debug.Assert was
	slowing down the XML text editor noticeably.

2009-01-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Makefile.am:
	* MonoDevelop.XmlEditor.mdp: Add missing reference.

2008-12-29  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.Gui/BaseXmlEditorExtension.cs: Fix cursor
	position after autocompleting end tags.

2008-12-29  Michael Hutchinson  <mhutchinson@novell.com>

	* MonoDevelop.XmlEditor.addin.xml:
	* MonoDevelop.XmlEditor/XmlDocumentParser.cs: Added a parser for XML
	files. Enables folding and error underlining.