@@ -1,3 +1,9 @@
+2009-02-07  Mike Krüger  <mkrueger@novell.com>
+
+	* MonoDevelop.XmlEditor/XmlTextEditorExtension.cs:
+	* MonoDevelop.XmlEditor.Completion/XmlSchemaCompletionData.cs:
+	  Fixed compiler warnings.
+
 2009-02-06  Lluis Sanchez Gual  <lluis@novell.com>
 
 	* MonoDevelop.XmlEditor.mds:
